<resources>
  <string name="app_name">MNML Screen Recorder</string>
  <string name="app_name_short">MNML</string>

  <string name="widget_service_notification_text">
    The recorder service is running. Tap to open the app.
  </string>

  <string name="start_recording">Record</string>
  <string name="stop_recording">Stop</string>
  <string name="recording_notification_text">Your screen is currently being captured…</string>
  <string name="video_recorded_notification_text">
    Video recorded successfully! Tap to view and share.
  </string>

  <string name="share">Share</string>
  <string name="delete">Delete</string>

  <string name="cd_start_recording">Start Recording</string>
  <string name="cd_stop_recording">Stop Recording</string>
  <string name="cd_stop_service">Stop Service</string>

</resources>
