<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="64dp"
    android:orientation="vertical"
    >

  <TextView
      android:id="@+id/notification_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/app_name"
      style="@style/TextAppearance.Compat.Notification.Title"
      />

  <TextView
      android:id="@+id/notification_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/widget_service_notification_text"
      style="@style/TextAppearance.Compat.Notification"
      />

  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/content_inset_half"
      android:orientation="horizontal"
      >

    <ImageButton
        android:id="@+id/action_record"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_marginEnd="@dimen/content_inset_less"
        android:background="?android:selectableItemBackground"
        android:contentDescription="@string/cd_start_recording"
        android:src="@drawable/ic_record_32dp"
        android:tint="@color/notification_icon_tint"
        />

    <ImageButton
        android:id="@+id/action_stop"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_marginEnd="@dimen/content_inset_less"
        android:background="?android:selectableItemBackground"
        android:contentDescription="@string/cd_stop_recording"
        android:src="@drawable/ic_stop_32dp"
        android:tint="@color/notification_icon_tint"
        />

    <ImageButton
        android:id="@+id/action_exit"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:background="?android:selectableItemBackground"
        android:contentDescription="@string/cd_stop_service"
        android:src="@drawable/ic_close_32dp"
        android:tint="@color/notification_icon_tint"
        />

  </LinearLayout>

</LinearLayout>
